syntax = "proto3";

import "search_request.proto";
import "search_response.proto";

service RemoteProcessorService {
	// Processes a search response
	rpc ProcessResponse (ProcessResponseRequest)
		returns (ProcessResponseResponse) {}

}

message ProcessResponseRequest {
	SearchResponse search_response = 1;
	SearchRequest search_request = 2;
}

message ProcessResponseResponse {
	SearchResponse search_response = 1;
}
